# sqlc-gen-node-pg

./: Cargo.toml  Makefile  README.md  build.rs
example/: sqlc.json
example/src/: hello.ts
examples/authors/: Makefile  package-lock.json  package.json
examples/authors/src/: query.sql.ts  query.test.ts
src/: codegen.proto  main.rs
