[package]
name = "sqlc-gen-json-wasm"
version = "0.1.0"
authors = ["Kyle Conroy <kyle@conroy.org>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
sqlparser = { version = "0.9.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
prost = "0.9.0"
bytes = "1.1.0"

[build-dependencies]
prost-build = "0.9.0"
