[package]
name = "sqlc-gen-node-pg"
version = "0.1.0"
authors = ["Kyle Conroy <kyle@conroy.org>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
serde = "1.0"
serde_json = "1.0"
prost = "0.10.0"
bytes = "1.1.0"
swc_common = "0.27.13"
swc_ecma_ast = "0.90.15"
swc_ecma_codegen = "0.123.0"

[build-dependencies]
prost-build = "0.10.0"
